--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,7 @@ phases:
       java: corretto8.x
   build:
     commands:
-      - ant makewar
+      - ant war
 artifacts:
    files:
       - '**/*'
